Added base information

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>James Zhang</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
+    <style>
+      .base-info {
+        text-align: center;
+        font-size: 1.5rem;
+      }
+    </style>
   </head>
   <body>
-    Hi, this's my website
+    <div class="base-info">
+
+      James Z. Zhang
+      <br>
+      <br>
+
+      <a href="https://github.com/James-Z-Zhang00"><i class="fab fa-github"></i> GitHub</a>
+      <a href="https://www.linkedin.com/in/james-z-zhang00/"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <i class="fas fa-envelope"></i> james.z.zhang00@gmail.com
+      <i class="fas fa-map-marker-alt"></i> Boston, MA
+
+    </div>
+
+
   </body>
 </html>
