--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
     <title>James Zhang</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
@@ -12,12 +13,44 @@
         text-align: center;
         font-size: 1.5rem;
       }
+
+      .project {
+        display: flex;
+        gap: 20px; /* space between cards */
+        flex-wrap: wrap; /* allow wrapping on small screens */
+        justify-content: left; /* center cards horizontally */
+        padding: 20px;
+      }
+
+      .card {
+        width: 300px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 16px;
+        margin: 20px auto;
+      }
+
+      .card img {
+        width: 100%;
+        border-radius: 10px 10px 0 0;
+      }
+      .card h3 {
+        margin-top: 10px;
+      }
+      .card p {
+        color: #555;
+      }
+
+      body {
+        font-family: 'Roboto', 'Open Sans', Arial, sans-serif;
+      }
     </style>
   </head>
   <body>
     <div class="base-info">
 
-      James Z. Zhang
+      <b>James Z. Zhang</b>
       <br>
       <br>
 
@@ -28,6 +61,24 @@
 
     </div>
 
+    <div class="project">
+      <h3>Projects</h3>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image">
+        <h3>Gmail</h3>
+        <p>This is a simple card component using HTML and CSS.</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image">
+        <h3>Google Drive</h3>
+        <p>This is a simple card component using HTML and CSS.</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image">
+        <h3>freeCodeCamp</h3>
+        <p>This is a simple card component using HTML and CSS.</p>
+      </div>
+    </div>
 
   </body>
 </html>
