Added other 2 sections

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         font-size: 1.5rem;
       }
 
-      .project {
+      .card-container {
         display: flex;
         gap: 20px; /* space between cards */
         flex-wrap: wrap; /* allow wrapping on small screens */
@@ -75,15 +75,10 @@
 
     </div>
 
-    <div class="project">
+    <div class="card-container">
       <div class="card">
         <img src="https://via.placeholder.com/300x150" alt="Card Image">
-        <h3>Gmail</h3>
-        <p>This is a simple card component using HTML and CSS.</p>
-      </div>
-      <div class="card">
-        <img src="https://via.placeholder.com/300x150" alt="Card Image">
-        <h3>Google Drive</h3>
+        <h3>Gmail & Google Drive Cloud</h3>
         <p>This is a simple card component using HTML and CSS.</p>
       </div>
       <div class="card">
@@ -93,10 +88,47 @@
       </div>
       <div class="card">
         <img src="https://via.placeholder.com/300x150" alt="Card Image">
-        <h3>freeCodeCamp</h3>
+        <h3>Complex Backend Project</h3>
+        <p>This is a simple card component using HTML and CSS.</p>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image">
+        <h3>Gmail & Google Drive Cloud</h3>
+        <p>This is a simple card component using HTML and CSS.</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image">
+        <h3>AI application</h3>
+        <p>This is a simple card component using HTML and CSS.</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image">
+        <h3>Complex Backend Project</h3>
+        <p>This is a simple card component using HTML and CSS.</p>
+      </div>
+    </div>
+
+    <div class="card-container">
+      <div class="card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image">
+        <h3>Gmail & Google Drive Cloud</h3>
+        <p>This is a simple card component using HTML and CSS.</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image">
+        <h3>AI application</h3>
+        <p>This is a simple card component using HTML and CSS.</p>
+      </div>
+      <div class="card">
+        <img src="https://via.placeholder.com/300x150" alt="Card Image">
+        <h3>Complex Backend Project</h3>
         <p>This is a simple card component using HTML and CSS.</p>
       </div>
     </div>
 
   </body>
 </html>
+w
