Planned for fundamental structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
-    <title>James Zhang</title>
+    <title>James Z. Zhang</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
     <style>
@@ -34,7 +34,7 @@
       }
 
       .card:hover {
-        transform: translateY(-5px);
+        transform: translateY(-10px);
         box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);  
       }
 
@@ -54,7 +54,7 @@
       body {
         font-family: 'Roboto', 'Open Sans', Arial, sans-serif;
         background-color: aquamarine;
-        padding: 2.0rem 3.0rem;
+        padding: 4.0rem 6.5rem;
       }
 
       .comment {
@@ -72,24 +72,31 @@
         justify-content: flex-start; /* center cards horizontally */
         padding: 20px;
       }
+
+      .contacts-container {
+        display: flex;
+        flex-wrap: wrap; 
+        justify-content: center;
+        gap: 3.5rem;
+      }
     </style>
   </head>
   <body>
     <div class="base-info">
       <b>James Z. Zhang</b>
-      <br>
-      <p>Full Stack Software Engineer</p>
+      <br><br>
+      <i>Software Development, AI and System Design</i>
       <p>Baseball 🥎 Volunteerism 🙋‍♂️ Guitar 🎸 American History 🇺🇸</p>
-      <br>
-      <a href="https://github.com/James-Z-Zhang00" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-      <a href="https://www.linkedin.com/in/james-z-zhang00/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-      <i class="fas fa-envelope"></i> james.z.zhang00@gmail.com
-      <i class="fas fa-map-marker-alt"></i> Boston, MA
     </div>
     <br>
+
+    <h3>Timeline</h3>
     <hr>
 
-    <h3>Core Project</h3>
+    <h3>Work Experience</h3>
+    <hr>
+
+    <h3>Personal Project</h3>
     <hr>
 
     <div class="card-container">
@@ -129,14 +136,15 @@
       </div>
     </div>
 
-    <h3>Volunteer Contribution</h3>
+    <h3>Charity Participation</h3>
     <hr>
 
     <div class="card-container">
       <div class="card">
         <img src="" alt="Red Cross Image" class="card-image">
         <h3>American Red Cross</h3>
-        <p>Service to the Armed Forces - Caseworker in Massachusetts</p>
+        <p>Caseworker in Massachusetts</p>
+        <p>...</p>
       </div>
       <div class="card">
         <img src="" alt="American Food Bank Image" class="card-image">
@@ -146,11 +154,22 @@
         <p>New York Cases</p>
       </div>
       <div class="card">
-        <img src="" alt="Habitat for Humanity Image" class="card-image">
-        <h3>Habitat for Humanity</h3>
-        <p>Construction Site</p>
-        <p>Restore</p>
+        <img src="" alt="Veteran Affairs Image" class="card-image">
+        <h3>Veteran Affairs</h3>
+        <p>...</p>
+        <p>...</p>
       </div>
+    </div>
+
+    <h3>Contact</h3>
+    <hr>
+
+    <br>
+    <div class="contacts-container">
+      <a href="https://github.com/James-Z-Zhang00" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+      <a href="https://www.linkedin.com/in/james-z-zhang00/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <a href="mailto:james.z.zhang00@gmail.com"><i class="fas fa-envelope"></i> james.z.zhang00@gmail.com</a>
+      <div><i class="fas fa-map-marker-alt"></i> Boston, MA</div>
     </div>
 
   </body>
